--- a/ProductCatalogFrontend/cart.html
+++ b/ProductCatalogFrontend/cart.html
@@ -263,7 +263,8 @@ proceedBtn.addEventListener('click', () => {
         return;
     }
 
-    fetch('http://127.0.0.1:5000/add_to_cart', {
+    fetch('https://catalog12.onrender.com/add_to_cart', {
+
         method: 'POST',
         headers: {
             'Content-Type': 'application/json'
