--- a/ProductCatalogFrontend/cart.html
+++ b/ProductCatalogFrontend/cart.html
@@ -264,7 +264,7 @@ proceedBtn.addEventListener('click', () => {
         return;
     }
 
-    fetch('https://catalog12.onrender.com/add_to_cart', {
+    fetch('https://productcatalog-xwre.onrender.com/add_to_cart', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json'
