--- a/ProductCatalogFrontend/index.html
+++ b/ProductCatalogFrontend/index.html
@@ -110,7 +110,7 @@
     <div class="toggle-link" onclick="toggleForms()">Don't have an account? Sign up</div>
   </div>
 <script>
-  const backendURL = "https://productcatalog-xwre.onrender.com"; // Update if backend URL changes
+  const backendURL = "https://catalog12.onrender.com/"; // Update if backend URL changes
   let isLogin = true;
 
   function toggleForms() {
