--- a/ProductCatalogFrontend/index.html
+++ b/ProductCatalogFrontend/index.html
@@ -110,73 +110,73 @@
     <div class="toggle-link" onclick="toggleForms()">Don't have an account? Sign up</div>
   </div>
 <script>
-  const backendURL = "https://catalog12.onrender.com/"; // Update if backend URL changes
-  let isLogin = true;
+  <script>
+const backendURL = "https://catalog12.onrender.com";  // ✅ Updated backend URL
 
-  function toggleForms() {
-    isLogin = !isLogin;
-    document.getElementById('loginForm').style.display = isLogin ? 'block' : 'none';
-    document.getElementById('signupForm').style.display = isLogin ? 'none' : 'block';
-    document.getElementById('formTitle').innerText = isLogin ? 'Login' : 'Sign Up';
-    document.querySelector('.toggle-link').innerText = isLogin
-      ? "Don't have an account? Sign up"
-      : "Already have an account? Login";
+let isLogin = true;
+
+function toggleForms() {
+  isLogin = !isLogin;
+  document.getElementById('loginForm').style.display = isLogin ? 'block' : 'none';
+  document.getElementById('signupForm').style.display = isLogin ? 'none' : 'block';
+  document.getElementById('formTitle').innerText = isLogin ? 'Login' : 'Sign Up';
+  document.querySelector('.toggle-link').innerText = isLogin 
+    ? "Don't have an account? Sign up"
+    : "Already have an account? Login";
+}
+
+// ✅ Login
+document.getElementById('loginForm').onsubmit = async function(e) {
+  e.preventDefault();
+  const email = document.getElementById('email').value.trim();
+  const password = document.getElementById('password').value;
+
+  try {
+    const res = await fetch(`${backendURL}/login`, {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ email, password })
+    });
+
+    const result = await res.json();
+    if (res.status === 200) {
+      localStorage.setItem("username", result.username);
+      localStorage.setItem("lastLoggedInEmail", result.email);
+      alert("Login successful!");
+      window.location.href = "home.html";  // Redirect
+    } else {
+      alert(result.message);
+    }
+  } catch (err) {
+    alert("Error connecting to server.");
+    console.error(err);
   }
+};
 
-  // Handle Signup
-  document.getElementById('signupForm').onsubmit = async function (e) {
-    e.preventDefault();
-    const email = document.getElementById('signupEmail').value.trim();
-    const username = document.getElementById('signupUsername').value.trim();
-    const password = document.getElementById('signupPassword').value;
+// ✅ Signup
+document.getElementById('signupForm').onsubmit = async function(e) {
+  e.preventDefault();
+  const email = document.getElementById('signupEmail').value.trim();
+  const username = document.getElementById('signupUsername').value.trim();
+  const password = document.getElementById('signupPassword').value;
 
-    try {
-      const response = await fetch(`${backendURL}/signup`, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ email, username, password })
-      });
+  try {
+    const res = await fetch(`${backendURL}/signup`, {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ email, username, password })
+    });
 
-      const result = await response.json();
-      if (response.status === 201) {
-        alert(result.message);
-        toggleForms(); // Switch to login form
-      } else {
-        alert(result.message || "Signup failed.");
-      }
-    } catch (err) {
-      console.error(err);
-      alert("Error connecting to server.");
+    const result = await res.json();
+    alert(result.message);
+    if (res.status === 201) {
+      toggleForms(); // Switch to login form
     }
-  };
-
-  // Handle Login
-  document.getElementById('loginForm').onsubmit = async function (e) {
-    e.preventDefault();
-    const email = document.getElementById('email').value.trim();
-    const password = document.getElementById('password').value;
-
-    try {
-      const response = await fetch(`${backendURL}/login`, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ email, password })
-      });
-
-      const result = await response.json();
-      if (response.status === 200) {
-        alert("Login successful!");
-        localStorage.setItem("username", result.username);
-        localStorage.setItem("lastLoggedInEmail", result.email);
-        window.location.href = "home.html";
-      } else {
-        alert(result.message || "Invalid email or password.");
-      }
-    } catch (err) {
-      console.error(err);
-      alert("Error connecting to server.");
-    }
-  };
+  } catch (err) {
+    alert("Error connecting to server.");
+    console.error(err);
+  }
+};
 </script>
 </body>
 </html>
