--- a/ProductCatalogFrontend/home.html
+++ b/ProductCatalogFrontend/home.html
@@ -121,59 +121,67 @@
       ? "Don't have an account? Sign up"
       : "Already have an account? Login";
   }
-document.getElementById('loginForm').onsubmit = function(e) {
-  e.preventDefault();
-  const email = document.getElementById('email').value.trim();
-  const password = document.getElementById('password').value;
 
-  const users = JSON.parse(localStorage.getItem('users')) || [];
-  const found = users.find(user => user.email === email && user.password === password);
+  // ✅ Login using backend only
+  document.getElementById('loginForm').onsubmit = async function(e) {
+    e.preventDefault();
+    const email = document.getElementById('email').value.trim();
+    const password = document.getElementById('password').value;
 
-  if (found) {
-    alert('Login successful!');
+    try {
+      const res = await fetch("https://catalog12.onrender.com/login", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({ email, password })
+      });
 
-    const lastEmail = localStorage.getItem('lastLoggedInEmail');
+      const result = await res.json();
 
-    // ✅ If different user, clear cart
-    if (lastEmail && lastEmail !== email) {
-      localStorage.removeItem('cart');
+      if (res.ok && result.username) {
+        alert("Login successful!");
+
+        const lastEmail = localStorage.getItem("lastLoggedInEmail");
+        if (lastEmail && lastEmail !== email) {
+          localStorage.removeItem("cart");
+        }
+
+        localStorage.setItem("username", result.username);
+        localStorage.setItem("lastLoggedInEmail", result.email);
+
+        // ✅ Always redirect to home.html
+        window.location.href = "home.html";
+      } else {
+        alert(result.message || "Invalid email or password.");
+      }
+    } catch (err) {
+      console.error("Server error:", err);
+      alert("Error connecting to server.");
+    }
+  };
+
+  // ✅ Keep signupForm as-is (localStorage-based unless you want to send to backend)
+  document.getElementById('signupForm').onsubmit = function(e) {
+    e.preventDefault();
+    const email = document.getElementById('signupEmail').value.trim();
+    const password = document.getElementById('signupPassword').value;
+    const username = document.getElementById('signupUsername').value.trim();
+
+    let users = JSON.parse(localStorage.getItem('users')) || [];
+    if (users.some(user => user.email === email)) {
+      alert('Email is already registered.');
+      return;
     }
 
-    // ✅ Save current user info
-    localStorage.setItem("username", found.username);
-    localStorage.setItem("lastLoggedInEmail", email);  // update with current login
+    users.push({ email, password, username });
+    localStorage.setItem('users', JSON.stringify(users));
 
-    // ✅ Redirect
-    window.location.href = 'home.html';
-  } else {
-    alert('Invalid email or password.');
-  }
-};
-
-
-
- document.getElementById('signupForm').onsubmit = function(e) {
-  e.preventDefault();
-  const email = document.getElementById('signupEmail').value.trim();
-  const password = document.getElementById('signupPassword').value;
-  const username = document.getElementById('signupUsername').value.trim();  // ✅ FIXED
-
-  let users = JSON.parse(localStorage.getItem('users')) || [];
-  if (users.some(user => user.email === email)) {
-    alert('Email is already registered.');
-    return;
-  }
-
-  // ✅ Save username too
-  users.push({ email, password, username });
-  localStorage.setItem('users', JSON.stringify(users));
-
-  alert('Account created for ' + username + '. You can now log in.');
-  toggleForms();
-};
-
-  
+    alert('Account created for ' + username + '. You can now log in.');
+    toggleForms();
+  };
 </script>
+
 
 
   
