--- a/ProductCatalogFrontend/index.html
+++ b/ProductCatalogFrontend/index.html
@@ -129,7 +129,7 @@
     const password = document.getElementById('password').value;
 
     try {
-      const res = await fetch("https://catalog12.onrender.com/login", {
+      const res = await fetch("https://catalog12.onrender.com/", {
         method: "POST",
         headers: {
           "Content-Type": "application/json"
